// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connectors Stats render when also updated 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws connectorStats"
  >
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Connector created
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last tested
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
      <span
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-full-circle StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-green500--2_VK"
          icon="full-circle"
        >
          <svg
            data-icon="full-circle"
            height="6"
            viewBox="0 0 16 16"
            width="6"
          >
            <desc>
              full-circle
            </desc>
            <path
              d="M8 0a8 8 0 100 16A8 8 0 108 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        Successful
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last updated
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last time connection is successful
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
  </div>
</div>
`;

exports[`Connectors Stats render when only created 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws connectorStats"
  >
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Connector created
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last tested
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
      <span
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-full-circle StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-green500--2_VK"
          icon="full-circle"
        >
          <svg
            data-icon="full-circle"
            height="6"
            viewBox="0 0 16 16"
            width="6"
          >
            <desc>
              full-circle
            </desc>
            <path
              d="M8 0a8 8 0 100 16A8 8 0 108 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        Successful
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last time connection is successful
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
  </div>
</div>
`;

exports[`Connectors Stats render when status is failure 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws connectorStats"
  >
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Connector created
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last tested
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
      <span
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
        style="display: inline-flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS StyledProps---color-red500--uX9L"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        Failed
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last updated
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
    >
      <span
        class="name"
      >
        Last time connection is successful
      </span>
      <span
        class="value"
      >
        dummy date
      </span>
    </div>
  </div>
</div>
`;
